--- a/NLP/dev-workspace/sa/glove-cnn_2023-12-12/convert_to_onnx.ipynb
+++ b/NLP/dev-workspace/sa/glove-cnn_2023-12-12/convert_to_onnx.ipynb
@@ -39,116 +39,83 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "End to end model not found at /Users/michaelcheng/Documents/MyDocs/HKU/COMP4801 FYP/FYP/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove-cnn-20000_120k_bal/glove-cnn-20000_120k_bal_2023-12-20_end2end.keras\n",
+      "Attempt to build from existing vectorizer and model\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-22 10:08:13.808253: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1 Max\n",
+      "2023-12-22 10:08:13.808275: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 32.00 GB\n",
+      "2023-12-22 10:08:13.808280: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 10.67 GB\n",
+      "2023-12-22 10:08:13.808322: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-12-22 10:08:13.808338: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n",
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "Loaded text vectorizer from /Users/michaelcheng/Documents/MyDocs/HKU/COMP4801 FYP/FYP/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove-cnn-20000_120k_bal/glove-cnn-20000_120k_bal_2023-12-20_textvectorizer.pkl\n",
+      "Loaded model from /Users/michaelcheng/Documents/MyDocs/HKU/COMP4801 FYP/FYP/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove-cnn-20000_120k_bal/glove-cnn-20000_120k_bal_2023-12-20_model.keras\n",
+      "Created end to end model from trained vectorizer and cnn-model\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "\n",
     "import tensorflow as tf\n",
     "import keras\n",
     "\n",
-    "# load the end to end model\n",
-    "# or build our own\n",
+    "# load the tf model\n",
+    "# either a end-to-end\n",
+    "# or build our own (by loading the vectorizer and the model)\n",
     "\n",
-    "LOAD_RAW_MODEL = True\n",
     "\n",
-    "end_to_end_model_path = Path.joinpath(training_storing_folder, \"{}_{}_end2end.keras\".format(\n",
+    "text_vectorizer_path = Path.joinpath(training_storing_folder, \"{}_{}_textvectorizer.pkl\".format(\n",
     "    training_name,\n",
     "    training_args_datetime.strftime(\"%Y-%m-%d\")\n",
     "))\n",
+    "vectorizer_from_disk = pickle.load(open(text_vectorizer_path, 'rb'))\n",
+    "vectorizer = tf.keras.layers.TextVectorization(\n",
+    "    max_tokens=MAX_FEATURES,\n",
+    "    output_sequence_length=512)\n",
     "\n",
-    "if LOAD_RAW_MODEL or (not end_to_end_model_path.exists()):\n",
-    "    print('End to end model not found at {}'.format(end_to_end_model_path))\n",
-    "    print('Attempt to build from existing vectorizer and model')\n",
+    "vectorizer.set_weights(vectorizer_from_disk['weights'])\n",
     "\n",
-    "    text_vectorizer_path = Path.joinpath(training_storing_folder, \"{}_{}_textvectorizer.pkl\".format(\n",
-    "        training_name,\n",
-    "        training_args_datetime.strftime(\"%Y-%m-%d\")\n",
-    "    ))\n",
-    "    vectorizer_from_disk = pickle.load(open(text_vectorizer_path, 'rb'))\n",
-    "    vectorizer = tf.keras.layers.TextVectorization(\n",
-    "        max_tokens=MAX_FEATURES,\n",
-    "        output_sequence_length=512)\n",
+    "model_path = Path.joinpath(training_storing_folder, \"{}_{}_model.keras\".format(\n",
+    "    training_name,\n",
+    "    training_args_datetime.strftime(\"%Y-%m-%d\")\n",
+    "))\n",
+    "model = keras.models.load_model(model_path)\n",
     "\n",
-    "    vectorizer.set_weights(vectorizer_from_disk['weights'])\n",
+    "print('\\n\\n')\n",
+    "print('Loaded text vectorizer from {}'.format(text_vectorizer_path))\n",
+    "print('Loaded model from {}'.format(model_path))\n",
     "\n",
-    "    model_path = Path.joinpath(training_storing_folder, \"{}_{}_model.keras\".format(\n",
-    "        training_name,\n",
-    "        training_args_datetime.strftime(\"%Y-%m-%d\")\n",
-    "    ))\n",
-    "    model = keras.models.load_model(model_path)\n",
+    "string_input = keras.Input(shape=(1,), dtype=\"string\")\n",
+    "x = vectorizer(string_input)\n",
+    "preds = model(x)\n",
+    "end_to_end_model = keras.Model(string_input, preds)\n",
     "\n",
-    "    print('\\n\\n')\n",
-    "    print('Loaded text vectorizer from {}'.format(text_vectorizer_path))\n",
-    "    print('Loaded model from {}'.format(model_path))\n",
-    "\n",
-    "    string_input = keras.Input(shape=(1,), dtype=\"string\")\n",
-    "    x = vectorizer(string_input)\n",
-    "    preds = model(x)\n",
-    "    end_to_end_model = keras.Model(string_input, preds)\n",
-    "\n",
-    "    print('Created end to end model from trained vectorizer and cnn-model')\n",
-    "else:\n",
-    "    end_to_end_model = keras.models.load_model(end_to_end_model_path)\n",
-    "    print('Loaded end to end model from {}'.format(end_to_end_model_path))"
+    "print('Created end to end model from trained vectorizer and cnn-model')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model_4\"\n",
-      "__________________________________________________________________________________________________\n",
-      " Layer (type)                Output Shape                 Param #   Connected to                  \n",
-      "==================================================================================================\n",
-      " input_5 (InputLayer)        [(None, 512)]                0         []                            \n",
-      "                                                                                                  \n",
-      " embedding_2 (Embedding)     (None, 512, 300)             6000600   ['input_5[0][0]']             \n",
-      "                                                                                                  \n",
-      " conv1d_6 (Conv1D)           (None, 506, 128)             268928    ['embedding_2[0][0]']         \n",
-      "                                                                                                  \n",
-      " conv1d_7 (Conv1D)           (None, 506, 128)             268928    ['embedding_2[0][0]']         \n",
-      "                                                                                                  \n",
-      " conv1d_8 (Conv1D)           (None, 506, 128)             268928    ['embedding_2[0][0]']         \n",
-      "                                                                                                  \n",
-      " max_pooling1d_6 (MaxPoolin  (None, 1, 128)               0         ['conv1d_6[0][0]']            \n",
-      " g1D)                                                                                             \n",
-      "                                                                                                  \n",
-      " max_pooling1d_7 (MaxPoolin  (None, 1, 128)               0         ['conv1d_7[0][0]']            \n",
-      " g1D)                                                                                             \n",
-      "                                                                                                  \n",
-      " max_pooling1d_8 (MaxPoolin  (None, 1, 128)               0         ['conv1d_8[0][0]']            \n",
-      " g1D)                                                                                             \n",
-      "                                                                                                  \n",
-      " concatenate_2 (Concatenate  (None, 1, 384)               0         ['max_pooling1d_6[0][0]',     \n",
-      " )                                                                   'max_pooling1d_7[0][0]',     \n",
-      "                                                                     'max_pooling1d_8[0][0]']     \n",
-      "                                                                                                  \n",
-      " flatten_2 (Flatten)         (None, 384)                  0         ['concatenate_2[0][0]']       \n",
-      "                                                                                                  \n",
-      " dropout_2 (Dropout)         (None, 384)                  0         ['flatten_2[0][0]']           \n",
-      "                                                                                                  \n",
-      " dense_2 (Dense)             (None, 2)                    770       ['dropout_2[0][0]']           \n",
-      "                                                                                                  \n",
-      "==================================================================================================\n",
-      "Total params: 6808154 (25.97 MB)\n",
-      "Trainable params: 6808154 (25.97 MB)\n",
-      "Non-trainable params: 0 (0.00 Byte)\n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,6 +148,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,29 +258,28 @@
      "text": [
       "/Users/michaelcheng/miniforge3/envs/fyp-test2/lib/python3.9/runpy.py:127: RuntimeWarning: 'tf2onnx.convert' found in sys.modules after import of package 'tf2onnx', but prior to execution of 'tf2onnx.convert'; this may result in unpredictable behaviour\n",
       "  warn(RuntimeWarning(msg))\n",
-      "2023-12-22 01:10:36,601 - WARNING - tensorflow_text not installed. Model will fail to load if tensorflow_text ops are used.\n",
-      "2023-12-22 01:10:36,602 - WARNING - '--tag' not specified for saved_model. Using --tag serve\n",
-      "2023-12-22 01:10:36,785 - WARNING - At this time, the v2.11+ optimizer `tf.keras.optimizers.RestoredOptimizer` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.RestoredOptimizer`.\n",
-      "2023-12-22 01:10:36,968 - INFO - Signatures found in model: [serving_default].\n",
-      "2023-12-22 01:10:36,968 - WARNING - '--signature_def' not specified, using first signature: serving_default\n",
-      "2023-12-22 01:10:36,968 - INFO - Output names: ['model_4']\n",
-      "2023-12-22 01:10:36,968 - WARNING - Could not search for non-variable resources. Concrete function internal representation may have changed.\n",
-      "2023-12-22 01:10:37,413 - INFO - Using tensorflow=2.15.0, onnx=1.14.1, tf2onnx=1.15.1/37820d\n",
-      "2023-12-22 01:10:37,413 - INFO - Using opset <onnx, 15>\n",
-      "2023-12-22 01:10:37,476 - WARNING - Cannot infer shape for StatefulPartitionedCall/model/text_vectorization/string_lookup/None_Lookup/LookupTableFindV2: StatefulPartitionedCall/model/text_vectorization/string_lookup/None_Lookup/LookupTableFindV2:0\n",
-      "2023-12-22 01:10:37,476 - WARNING - Cannot infer shape for StatefulPartitionedCall/model/text_vectorization/string_lookup/SelectV2: StatefulPartitionedCall/model/text_vectorization/string_lookup/SelectV2:0\n",
-      "2023-12-22 01:10:37,494 - INFO - Computed 0 values for constant folding\n",
-      "2023-12-22 01:10:37,567 - ERROR - Failed to convert node 'StatefulPartitionedCall/model/text_vectorization/string_lookup/None_Lookup/LookupTableFindV2' (fct=<bound method LookupTableFind.version_8 of <class 'tf2onnx.custom_opsets.onnx_ml.LookupTableFind'>>)\n",
+      "2023-12-22 10:19:03,389 - WARNING - tensorflow_text not installed. Model will fail to load if tensorflow_text ops are used.\n",
+      "2023-12-22 10:19:03,391 - WARNING - '--tag' not specified for saved_model. Using --tag serve\n",
+      "2023-12-22 10:19:03,570 - WARNING - At this time, the v2.11+ optimizer `tf.keras.optimizers.RestoredOptimizer` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.RestoredOptimizer`.\n",
+      "2023-12-22 10:19:03,704 - INFO - Signatures found in model: [serving_default].\n",
+      "2023-12-22 10:19:03,704 - WARNING - '--signature_def' not specified, using first signature: serving_default\n",
+      "2023-12-22 10:19:03,704 - INFO - Output names: ['model_4']\n",
+      "2023-12-22 10:19:03,704 - WARNING - Could not search for non-variable resources. Concrete function internal representation may have changed.\n",
+      "2023-12-22 10:19:04,043 - INFO - Using tensorflow=2.15.0, onnx=1.14.1, tf2onnx=1.15.1/37820d\n",
+      "2023-12-22 10:19:04,043 - INFO - Using opset <onnx, 15>\n",
+      "2023-12-22 10:19:04,104 - WARNING - Cannot infer shape for StatefulPartitionedCall/model/text_vectorization/string_lookup/None_Lookup/LookupTableFindV2: StatefulPartitionedCall/model/text_vectorization/string_lookup/None_Lookup/LookupTableFindV2:0\n",
+      "2023-12-22 10:19:04,104 - WARNING - Cannot infer shape for StatefulPartitionedCall/model/text_vectorization/string_lookup/SelectV2: StatefulPartitionedCall/model/text_vectorization/string_lookup/SelectV2:0\n",
+      "2023-12-22 10:19:04,118 - INFO - Computed 0 values for constant folding\n",
+      "{}\n",
+      "2023-12-22 10:19:04,180 - ERROR - Failed to convert node 'StatefulPartitionedCall/model/text_vectorization/string_lookup/None_Lookup/LookupTableFindV2' (fct=<bound method LookupTableFind.version_8 of <class 'tf2onnx.custom_opsets.onnx_ml.LookupTableFind'>>)\n",
       "'OP=LookupTableFindV2\\nName=StatefulPartitionedCall/model/text_vectorization/string_lookup/None_Lookup/LookupTableFindV2\\nInputs:\\n\\tunknown:0=Placeholder, [], 7\\n\\tStatefulPartitionedCall/model/text_vectorization/StringSplit/StringSplitV2:1=StringSplit, [-1], 8\\n\\tFunc/StatefulPartitionedCall/input/_2:0=Const, [], 7\\nOutpus:\\n\\tStatefulPartitionedCall/model/text_vectorization/string_lookup/None_Lookup/LookupTableFindV2:0=[], 7'\n",
       "Traceback (most recent call last):\n",
       "  File \"/Users/michaelcheng/miniforge3/envs/fyp-test2/lib/python3.9/site-packages/tf2onnx/tfonnx.py\", line 292, in tensorflow_onnx_mapping\n",
       "    func(g, node, **kwargs, initialized_tables=initialized_tables, dequantize=dequantize)\n",
-      "  File \"/Users/michaelcheng/miniforge3/envs/fyp-test2/lib/python3.9/site-packages/tf2onnx/custom_opsets/onnx_ml.py\", line 34, in version_8\n",
-      "    utils.make_sure(shared_name is not None, \"Could not determine table shared name for node %s\", node.name)\n",
-      "  File \"/Users/michaelcheng/miniforge3/envs/fyp-test2/lib/python3.9/site-packages/tf2onnx/utils.py\", line 264, in make_sure\n",
-      "    raise ValueError(\"make_sure failure: \" + error_msg % args)\n",
-      "ValueError: make_sure failure: Could not determine table shared name for node StatefulPartitionedCall/model/text_vectorization/string_lookup/None_Lookup/LookupTableFindV2\n",
-      "2023-12-22 01:10:37,572 - WARNING - ONNX Failed to infer shapes and dtypes for [Compress__94, type: Compress]\n",
+      "  File \"/Users/michaelcheng/miniforge3/envs/fyp-test2/lib/python3.9/site-packages/tf2onnx/custom_opsets/onnx_ml.py\", line 55, in version_8\n",
+      "    cats_strings, cats_int64s = initialized_tables[shared_name]\n",
+      "KeyError: 'LookupTableFindV2'\n",
+      "2023-12-22 10:19:04,185 - WARNING - ONNX Failed to infer shapes and dtypes for [Compress__94, type: Compress]\n",
       "Traceback (most recent call last):\n",
       "  File \"/Users/michaelcheng/miniforge3/envs/fyp-test2/lib/python3.9/site-packages/tf2onnx/schemas.py\", line 154, in infer_onnx_shape_dtype\n",
       "    inferred_model = shape_inference.infer_shapes(model_proto, strict_mode=True)\n",
@@ -333,11 +306,9 @@
       "    raise exceptions[0]\n",
       "  File \"/Users/michaelcheng/miniforge3/envs/fyp-test2/lib/python3.9/site-packages/tf2onnx/tfonnx.py\", line 292, in tensorflow_onnx_mapping\n",
       "    func(g, node, **kwargs, initialized_tables=initialized_tables, dequantize=dequantize)\n",
-      "  File \"/Users/michaelcheng/miniforge3/envs/fyp-test2/lib/python3.9/site-packages/tf2onnx/custom_opsets/onnx_ml.py\", line 34, in version_8\n",
-      "    utils.make_sure(shared_name is not None, \"Could not determine table shared name for node %s\", node.name)\n",
-      "  File \"/Users/michaelcheng/miniforge3/envs/fyp-test2/lib/python3.9/site-packages/tf2onnx/utils.py\", line 264, in make_sure\n",
-      "    raise ValueError(\"make_sure failure: \" + error_msg % args)\n",
-      "ValueError: make_sure failure: Could not determine table shared name for node StatefulPartitionedCall/model/text_vectorization/string_lookup/None_Lookup/LookupTableFindV2\n"
+      "  File \"/Users/michaelcheng/miniforge3/envs/fyp-test2/lib/python3.9/site-packages/tf2onnx/custom_opsets/onnx_ml.py\", line 55, in version_8\n",
+      "    cats_strings, cats_int64s = initialized_tables[shared_name]\n",
+      "KeyError: 'LookupTableFindV2'\n"
      ]
     }
    ],
@@ -427,7 +398,7 @@
     "\n",
     "for i in range(len(test_data)):\n",
     "    pred_keras.append(end_to_end_model.predict(test_data[i]))\n",
-    "    perd_onnx.append(sess.run([\"output1\", \"output2\"], {\"input1\": input1}))\n",
+    "    perd_onnx.append(sess.run([\"output1\", \"output2\"], {\"input1\": test_data[i]}))\n",
     "\n",
     "print(pred_keras)\n",
     "print(perd_onnx)"
